--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - "8079:8079"
     networks:
       - crm
+    restart: on-failure
   discovery-server:
     build: ./discoveryserver
     ports:
@@ -29,6 +30,7 @@ services:
       - SPRING_CLOUD_CONFIG_PROFILE=docker-ibrahim
       - CONFIGURL=http://config-server:8079
     restart: on-failure
+
   gateway-server:
     build: ./gatewayserver
     ports:
@@ -57,6 +59,50 @@ services:
     networks:
       - crm
 
+  product-service:
+    build: ./productservice
+    ports:
+      - "8083:8083"
+    restart: on-failure
+    depends_on:
+      - config-server
+      - discovery-server
+      - gateway-server
+    environment:
+      - SPRING_CLOUD_CONFIG_PROFILE=docker-ibrahim
+      - CONFIGURL=http://config-server:8079
+    networks:
+      - crm
+
+  order-service:
+    build: ./orderservice
+    ports:
+      - "8084:8084"
+    restart: on-failure
+    depends_on:
+      - config-server
+      - discovery-server
+      - gateway-server
+    environment:
+      - SPRING_CLOUD_CONFIG_PROFILE=docker-ibrahim
+      - CONFIGURL=http://config-server:8079
+    networks:
+      - crm
+
+  bill-service:
+    build: ./billservice
+    ports:
+      - "8085:8085"
+    restart: on-failure
+    depends_on:
+      - config-server
+      - discovery-server
+      - gateway-server
+    environment:
+      - SPRING_CLOUD_CONFIG_PROFILE=docker-ibrahim
+      - CONFIGURL=http://config-server:8079
+    networks:
+      - crm
 
 volumes:
   postgresql-volume:
