--- a/customerservice/pom.xml
+++ b/customerservice/pom.xml
@@ -90,7 +90,21 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.turkcell</groupId>
+            <artifactId>turkcell.pair1.crm.core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>github</id>
+            <name>Github Package Center</name>
+            <url>https://maven.pkg.github.com/IbrahimSengun63/turkcel-pair1-crm-core</url>
+        </repository>
+    </repositories>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
